# ESP32-2432S022_lvgl_example

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/LovyanGFX/: CMakeLists.txt
components/lvgl/: CMakeLists.txt  lv_conf.h
components/smart_fridge/: CMakeLists.txt  app.cpp  app.h  barcode_scan.c  smart_fridge.h  stock_tab.cpp  stock_tab.h
components/wifi/: CMakeLists.txt  Kconfig.projbuild  http_utils.cpp  http_utils.h  wifi_utils.c  wifi_utils.h
main/: CMakeLists.txt  CST820.cpp  CST820.h  gui_config.cpp  gui_config.h  main.cpp
